objects/ESales_Callout_Fields_Set__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>FieldName__c</fullName>
        <label>FieldName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tag_Name__c</fullName>
        <description>Name of the tag for ESales callouts</description>
        <label>Tag Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>ESales Callout Fields Set</label>
</CustomObject>